# fordingbridgeastro-slideshow

./: .prettierrc  README.md  package.json  pnpm-lock.yaml
src/: App.svelte  main.ts
src-rs/: Cargo.toml  tauri.conf.json  template.wxs
src-rs/icons/: icon.icns
src-rs/src/: main.rs
src/lib/: Caption.svelte  Configuration.svelte  Logo.svelte  Slideshow.svelte  config.ts  global.scss  index.ts  specta.ts
src/lib/supabase/: index.ts  types.ts
